# forgts

./: .gitignore  README.md  _quarto.yml  custom.scss  index.qmd  pyproject.toml  setup.py
docs/: index.html
docs/site_libs/bootstrap/: bootstrap.min.css
example/: example.ipynb
tests/: test__init__.py  test_styling.py  test_translate_formatting.py
