[tool.poetry]
name = "forgts"
version = "0.1.0"
description = "A package that extracts formatting from Excel files and applies it to great_tables objects."
authors = ["Fernanda Aguirre Ruiz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.0.3"
nbformat = "^5.1.3"
pandas = "^1.3.0"
numpy = "^1.21.0"
requests = "^2.26.0"
plotly = "^5.3.1"
openpyxl = "^3.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
