[tool.poetry]
name = "forgts"
version = "0.1.0"
description = "A package that extracts formatting from Excel files and applies it to great_tables objects."
authors = ["Fernanda Aguirre Ruiz"]
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3.11"
]

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.0.9"
great-tables = "^0.17.0"
numpy = "^2.2.3"
pandas = "^2.2.3"
ipykernel = "^6.29.5"

[project.urls]
Homepage = "https://fer-aguirre.github.io/forgts/"
Documentation = "https://github.com/fer-aguirre/forgts/blob/main/README.md"
Source = "https://github.com/fer-aguirre/forgts"
Tracker = "https://github.com/fer-aguirre/forgts/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
